[project]
name = "scrape-amsat"
version = "0.1.0"
description = "scraping page for fun."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.14"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.14"
pandas = "^3.0.1"
requests = "^2.32.0"
beautifulsoup4 = "^4.13.0"
